--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/react-dom": "^16.9.0",
     "@types/styled-components": "^5.0.0",
     "@types/styled-system": "^5.1.7",
+    "csstype": "^2.6.9",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.4.0",
@@ -51,6 +52,7 @@
     "tslint": "^6.0.0",
     "tslint-config-prettier": "^1.18.0",
     "tslint-plugin-prettier": "^2.1.0",
-    "tslint-react": "^4.2.0"
+    "tslint-react": "^4.2.0",
+    "typescript-styled-plugin": "^0.15.0"
   }
 }
