--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "start:style": "styleguidist server",
     "build": "react-scripts build",
     "build:style": "styleguidist build",
-    "test": "react-scripts test",
+    "test": "node_modules/.bin/jest",
     "eject": "react-scripts eject",
     "tslint": "tslint '*.{ts,tsx}'"
   },
@@ -44,7 +44,11 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "@types/jest": "^24.0.0",
+    "@types/enzyme": "^3.10.5",
+    "@types/enzyme-adapter-react-16": "^1.0.6",
+    "@types/jest": "^25.1.3",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
     "prettier": "^1.19.1",
     "react-docgen-typescript": "^1.16.2",
     "react-styleguidist": "^10.6.2",
