--- a/package.json
+++ b/package.json
@@ -3,27 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.9.0",
-    "@types/react-dom": "^16.9.0",
-    "@types/styled-components": "^5.0.0",
-    "@types/styled-system": "^5.1.7",
     "csstype": "^2.6.9",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-scripts": "3.4.0",
     "styled-components": "^5.0.1",
-    "styled-system": "^5.1.5",
-    "typescript": "~3.7.2"
+    "styled-system": "^5.1.5"
   },
   "scripts": {
     "start": "styleguidist server",
     "build": "yarn build:style && yarn build:package",
     "build:style": "rm -rf ./styleguide && styleguidist build",
     "build:package": "rm -rf ./lib && tsc",
+    "clean": "rm -rf ./lib && rm -rf ./styleguide && rm -rf ./node_modules",
     "test": "node_modules/.bin/jest",
     "eject": "react-scripts eject",
-    "tslint": "tslint '*.{ts,tsx}'"
+    "eslint": "eslint './**/*.{ts,tsx}'"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -47,16 +40,26 @@
     "@types/enzyme": "^3.10.5",
     "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/jest": "^25.1.3",
+    "@types/node": "^12.0.0",
+    "@types/react": "^16.9.0",
+    "@types/react-dom": "^16.9.0",
+    "@types/styled-components": "^5.0.0",
+    "@types/styled-system": "^5.1.7",
+    "@typescript-eslint/eslint-plugin": "^2.21.0",
+    "@typescript-eslint/parser": "^2.21.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-react-hooks": "^2.5.0",
     "prettier": "^1.19.1",
     "react-docgen-typescript": "^1.16.2",
+    "react-dom": "^16.12.0",
+    "react-scripts": "3.4.0",
     "react-styleguidist": "^10.6.2",
     "ts-jest": "^25.2.1",
-    "tslint": "^6.0.0",
-    "tslint-config-prettier": "^1.18.0",
-    "tslint-plugin-prettier": "^2.1.0",
     "tslint-react": "^4.2.0",
+    "typescript": "^3.8.3",
     "typescript-styled-plugin": "^0.15.0"
   }
 }
