--- a/.eslintrc
+++ b/.eslintrc
@@ -4,11 +4,15 @@
         "node": true
     },
     "extends": [
+        "plugin:react/recommended",
         "plugin:@typescript-eslint/recommended",
         "prettier",
         "prettier/@typescript-eslint"
     ],
-    "ignorePatterns": [],
+    "ignorePatterns": [
+        "node_modules/",
+        "/**/*.test.tsx"
+    ],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
         "project": "tsconfig.json",
@@ -23,7 +27,9 @@
     "rules": {
         "@typescript-eslint/explicit-function-return-type": "off",
         "react-hooks/rules-of-hooks": "error",
-        "react-hooks/exhaustive-deps": "warn"
+        "react-hooks/exhaustive-deps": "warn",
+        "@typescript-eslint/no-explicit-any": "off",
+        "react/prop-types": "off"
     },
     "settings": {
       "react": {
