Fix travis deployment

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,13 +8,18 @@ cache:
 jobs:
   include:
     - stage: test
+      if: commit_message !~ /(storybook-deploy)/
       script:
         - yarn eslint
         - yarn test --ci
         - yarn build
-    - stage: deploy
-      if: branch = master AND (NOT type = pull_request)
+    - stage: bump version and release to npm
+      if: branch = master AND (NOT type = pull_request) AND  AND (commit_message !~ /(storybook-deploy)/)
       script:
         - yarn test:coveralls
         - yarn build
-        - yarn semantic-release
+        - npx semantic-release
+    - stage: deploy and release storybook
+        if: branch = master AND (NOT type = pull_request) AND (commit_message =~ /(storybook-deploy)/)
+        script:
+          - yarn test --ci
