--- a/.releaserc
+++ b/.releaserc
@@ -31,7 +31,7 @@
       "@semantic-release/git",
       {
         "assets": ["package.json"],
-        "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
+        "message": "chore(storybook-deploy): ${nextRelease.version}\n\n${nextRelease.notes}"
       }
     ]
   ]
