--- a/package.json
+++ b/package.json
@@ -1,82 +1,48 @@
 {
   "name": "mw-design",
+  "version": "2.0.0",
   "description": "My personal UI library built with styled-component, the goal of it is to be as slim and minimum as possible, but at the same time able to be themed.",
-  "version": "1.0.3",
-  "files": [
-    "lib"
-  ],
-  "keywords": [
-    "react",
-    "ui-library",
-    "styled-components"
-  ],
-  "author": "thousight",
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/thousight/MW-Design.git"
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc -b && vite build",
+    "lint": "eslint .",
+    "preview": "vite preview",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
-    "csstype": "^2.6.19",
-    "react": "^16.14.0",
-    "styled-components": "^5.3.3",
-    "styled-system": "^5.1.5"
-  },
-  "scripts": {
-    "start": "styleguidist server",
-    "build": "yarn build:style && yarn build:lib",
-    "build:style": "rm -rf ./styleguide && styleguidist build",
-    "build:lib": "rm -rf ./lib && tsc",
-    "clean": "rm -rf ./lib && rm -rf ./styleguide && rm -rf ./node_modules",
-    "test": "node_modules/.bin/jest",
-    "test:coverage": "yarn test --coverage && open coverage/lcov-report/index.html",
-    "test:coveralls": "yarn test --coverage --coverageReporters=text-lcov | coveralls",
-    "eject": "react-scripts eject",
-    "eslint": "eslint './src/**/*.{ts,tsx}'"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0"
   },
   "devDependencies": {
-    "@semantic-release/commit-analyzer": "^8.0.1",
-    "@semantic-release/git": "^9.0.0",
-    "@semantic-release/npm": "^7.0.3",
-    "@semantic-release/release-notes-generator": "^9.0.1",
-    "@types/enzyme": "^3.10.5",
-    "@types/enzyme-adapter-react-16": "^1.0.6",
-    "@types/jest": "^25.1.3",
-    "@types/node": "^14.0.0",
-    "@types/react": "^16.9.0",
-    "@types/react-dom": "^16.9.0",
-    "@types/styled-components": "^5.0.0",
-    "@types/styled-system": "^5.1.7",
-    "@typescript-eslint/eslint-plugin": "^3.0.0",
-    "@typescript-eslint/parser": "^2.21.0",
-    "coveralls": "^3.0.9",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.2",
-    "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.10.0",
-    "eslint-plugin-react-hooks": "^3.0.0",
-    "husky": "^4.2.3",
-    "lint-staged": "^10.0.8",
-    "prettier": "^2.0.0",
-    "react-docgen-typescript": "^1.16.2",
-    "react-dom": "^16.12.0",
-    "react-scripts": "3.4.0",
-    "react-styleguidist": "^11.0.0",
-    "ts-jest": "^26.0.0",
-    "tslint-react": "^4.2.0",
-    "typescript": "^3.8.3",
-    "typescript-styled-plugin": "^0.15.0"
+    "@chromatic-com/storybook": "^4.1.2",
+    "@eslint/js": "^9.39.1",
+    "@storybook/addon-a11y": "^10.0.7",
+    "@storybook/addon-docs": "^10.0.7",
+    "@storybook/addon-onboarding": "^10.0.7",
+    "@storybook/addon-vitest": "^10.0.7",
+    "@storybook/react-vite": "^10.0.7",
+    "@types/node": "^24.10.0",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.2",
+    "@vitejs/plugin-react": "^5.1.0",
+    "babel-plugin-react-compiler": "^19.1.0-rc.3",
+    "eslint": "^9.39.1",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.24",
+    "eslint-plugin-storybook": "^10.0.7",
+    "globals": "^16.5.0",
+    "storybook": "^10.0.7",
+    "typescript": "~5.9.3",
+    "typescript-eslint": "^8.46.3",
+    "vite": "npm:rolldown-vite@7.2.2",
+    "vitest": "^4.0.8",
+    "playwright": "^1.56.1",
+    "@vitest/browser-playwright": "^4.0.8",
+    "@vitest/coverage-v8": "^4.0.8"
+  },
+  "resolutions": {
+    "vite": "npm:rolldown-vite@7.2.2"
   }
 }
