--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "storybook dev -p 6006",
     "build": "storybook build",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "start": "http-server storybook-static"
   },
   "dependencies": {
     "react": "^19.2.0",
@@ -15,6 +16,10 @@
   "devDependencies": {
     "@chromatic-com/storybook": "^4.1.2",
     "@eslint/js": "^9.39.1",
+    "@semantic-release/commit-analyzer": "^13.0.1",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/npm": "^13.1.1",
+    "@semantic-release/release-notes-generator": "^14.1.0",
     "@storybook/addon-a11y": "^10.0.7",
     "@storybook/addon-docs": "^10.0.7",
     "@storybook/addon-onboarding": "^10.0.7",
@@ -32,6 +37,7 @@
     "eslint-plugin-react-refresh": "^0.4.24",
     "eslint-plugin-storybook": "^10.0.7",
     "globals": "^16.5.0",
+    "http-server": "^14.1.1",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.6",
     "playwright": "^1.56.1",
