--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "start": "http-server storybook-static"
   },
   "dependencies": {
+    "@storybook/react-vite": "^10.0.7",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "storybook": "^10.0.7"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^4.1.2",
@@ -24,7 +26,6 @@
     "@storybook/addon-docs": "^10.0.7",
     "@storybook/addon-onboarding": "^10.0.7",
     "@storybook/addon-vitest": "^10.0.7",
-    "@storybook/react-vite": "^10.0.7",
     "@types/node": "^24.10.0",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
@@ -42,7 +43,6 @@
     "lint-staged": "^16.2.6",
     "playwright": "^1.56.1",
     "prettier": "^3.6.2",
-    "storybook": "^10.0.7",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.3",
     "vite": "npm:rolldown-vite@7.2.2",
